https://www.plantuml.com/plantuml/uml/lLJDRjf04BxxAKQSI2kdGRrPo0g75f0ef92evuqzCIlChZixJfh-L7s8Fc6VfBjsR8Y1bNfeEC1wlfblvljcpQLXGLnkSvWoac1DS2NO7XM4yB54mp3JMM0sKXM2n1QIN1WpOYPvMp9E4wrMyYl2HJVblLPS8OEtUr0Xaet8SCMFEG9Xma9bEGPhcI8aaX9xPiaMc-WjFcZQmE02_lpwVJXTlnhEpdOM15BPq9r8i9wupVqM0BnU2pF7Bzm_Y-1Mwno5Sb5LX-g2u4SGL4D3GrgLXf_TaubW9WqFAoXsuT0HY3JjL_WJX-Mwrp9raB6o7RTKx1urfKYOjjsQyHn6U8zay2XMaDGa-N74CnI6-qsdgwVuaPgVHed2hBMJjZzrHs2jhZ8wWXMJL9aBD0qxVHn4-20e7UiyRMI59MMek3MrDIP3lhRCJbFBxQ8jdmEw3Ho-R7licIVDZUkplpud1bMvVKvIQPejFjdl-MBvOJIpXybqFB4_Dylnk_drpeD5lP33kn8szXsiF2d9Q6grX_zyiPRreb-qPsFD2mjrMrnfugx3mw4kKBr9ScqmXOAqlelZ_pTE-oht1ZtGOGYzLxqQXGWCQq9JvrZQk7CXWwDNfFwSdt-FEozUTxd-xADhyN2VylDOTglQWZ5uL4IG40f6yxp2e-H4XKVDhiBlPmmjOmIxVp2FhPuYppmdYpmcUug2IrHfkSt_0W00
@startuml Iterator Pattern - Quest Log
skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam packageStyle rectangle
hide circle
title Homework 10 — Iterator Pattern (QuestLog)

interface QuestIterator {
  +hasNext(): boolean
  +next(): Quest
}

class QuestLog {
  -quests: List<Quest>
  --
  +add(quest: Quest): void
  +size(): int
  +ordered(): QuestIterator
  +reverse(): QuestIterator
  +priorityAtLeast(t: QuestPriority): QuestIterator
  ~snapshot(): List<Quest>
}

class Quest {
  -title: String
  -priority: QuestPriority
  -rewardGold: int
  -urgent: boolean
  --
  +getTitle(): String
  +getPriority(): QuestPriority
  +getRewardGold(): int
  +isUrgent(): boolean
}

enum QuestPriority {
  LOW
  NORMAL
  HIGH
  URGENT
}

class OrderedQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  --
  +hasNext(): boolean
  +next(): Quest
}

class ReverseQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  --
  +hasNext(): boolean
  +next(): Quest
}

class PriorityQuestIterator {
  -snapshot: List<Quest>
  -cursor: int
  --
  +hasNext(): boolean
  +next(): Quest
}

class RewardSortedQuestIterator <<open/closed proof>> {
  -snapshot: List<Quest>
  -cursor: int
  --
  +hasNext(): boolean
  +next(): Quest
}

QuestLog "1" o-- "*" Quest : stores
Quest --> QuestPriority

OrderedQuestIterator       ..|> QuestIterator
ReverseQuestIterator       ..|> QuestIterator
PriorityQuestIterator      ..|> QuestIterator
RewardSortedQuestIterator  ..|> QuestIterator

QuestLog ..> OrderedQuestIterator       : creates
QuestLog ..> ReverseQuestIterator       : creates
QuestLog ..> PriorityQuestIterator      : creates

OrderedQuestIterator       ..> QuestLog : snapshot()
ReverseQuestIterator       ..> QuestLog : snapshot()
PriorityQuestIterator      ..> QuestLog : snapshot()
RewardSortedQuestIterator  ..> QuestLog : snapshot()

@enduml